--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -8,7 +8,45 @@ body,html{
   background: rgb(29, 63, 102);
   height: 100vh;
 }
-
+  .modal
+        {
+            position: fixed;
+            z-index: 999;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            left: 0;
+            background-color: Black;
+            filter: alpha(opacity=60);
+            opacity: 0.6;
+            -moz-opacity: 0.8;
+        }
+        .mcenter
+        {
+            z-index: 1000;
+            margin: 300px auto;
+            padding: 10px;
+            width: 130px;
+            background-color: White;
+            border-radius: 10px;
+            filter: alpha(opacity=100);
+            opacity: 1;
+            -moz-opacity: 1;
+        }
+        .mcenter img
+        {
+            height: 100px;
+            width: 100px;
+        }
+.padding{
+	padding: 4px!important;
+}
+.dropzone {
+    min-height: 150px;
+    border: 4px dashed rgba(103,58,183,.37)!important;
+    background: #f5f5f5!important;
+    padding: 20px;
+}
 .navbar .nav-links ul {
   list-style:none;
   float: right;
