--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,7 +1,7 @@
 body{
   min-width: 320px;
 }
-@media (max-width:1100px) {
+@media (max-width:1200px) {
   .navbar{
     padding: 0px 50px;
   }
@@ -16,44 +16,14 @@ body{
 }
 @media (max-width:850px) {
 /* navbar */
-/* End of navbar */
-.form-container{
-  margin-top: 70px;
-    display: block;
-    padding:10px 40px;
-    text-align: center;
-  }
-  .side-form-box img{
-    width: 200px;
-    height: 177px;
-  }
-  .form-field:first-child h3{
-    font-size: 13px;
-
-  }
-  .form-field{
-    margin-left: -70px;
-  }
-  .form-field-sigup{
-    margin-left: -50px;
-  }
-  .side-form-box p{
-    margin-left: -60px !important;
-    padding-bottom: 10px;
-  }
-  .signup-resp-p{
-    display:block;
-  }
-  .signup-p{
-    display: none
-  }
+.navbar .nav-links ul li a.active{
+  background: none !important;
 }
+/* End of navbar */
 
 
-@media (max-width:750px) {
-
+@media (max-width:876px) {
   /* navbar */
-
   .navbar{
   display: flex;
   justify-content: center;
@@ -66,7 +36,7 @@ body{
 .nav-links ul li {
   display:block;
   width: 100%;
-  padding: 20px 0px !important;
+  padding: 10px 0px !important;
 }
 .nav-links ul li:hover{
   background: #636e72;
@@ -88,22 +58,24 @@ body{
 .nav-links ul{
   padding-left: 0px !important;
   position: absolute;
-  left: -100%;
+  left: 0;
   top: 80px;
   width: 100%;
   height: 100vh;
   background: #000;
   z-index: 20;
   margin-top: -20px;
-  transition: all .5s;
+  transition: all 1s ease-out;
   text-align: center;
+  clip-path:circle(100px at 90% -40%);
+  pointer-events:none;
 }
-#chk-list-hide:checked ~ ul {
-  left: 0%;
+.fade-nav{
+  transition: all 2s ease-out;
+  clip-path:circle(1500px at 90% -40%) !important;
+  pointer-events:all !important;}
 }
-
-  /* navbar */
-
+@media screen and (max-width:750px) {
 
   .upload-container{
     padding:0 ;
@@ -135,7 +107,13 @@ body{
     padding-bottom: 5px !important;
   }
 
+
+
+
 }
+  /* navbar */
+
+
 @media (max-width:300px) {
   .logo span:last-child {
     display: none;
