--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-a.q{
-	color:#DA0353
-}
 body,html{
   font-family: 'Roboto';
   background: #0A183D;
@@ -18,18 +15,25 @@ body,html{
   width: 10px;
 }
 ::-webkit-scrollbar-track {
-  background: #0A183D;
+  background: #eee;
 }
 ::-webkit-scrollbar-thumb {
   background: #888;
+  border-radius: 5px;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-.container {
+.Mycontainer-home {
   width: 100%;
-  padding:  0 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   flex: 1;
+}
+#aboutUs,#contactUs{
+  width: 915px !important;
 }
 .navbar{
   background: #08192D;
@@ -88,10 +92,60 @@ body,html{
   margin: 0px 10px;
   transition: .3s;
 }
-.navbar .nav-links ul li a:hover,.navbar .nav-links ul li a.active {
+.navbar .nav-links ul li a:hover,.navbar .nav-links ul li a.active
+{
 color: #fff;
 background: #DA0353;
 }
+
+.start-upload-btn{
+  border: 2px solid #fff;
+  border-radius: 5px;
+}
+
+#google_translate_element{
+  position: relative;
+}
+.goog-logo-link{
+  display: none;
+}
+.goog-logo-link #text{
+  display: none;
+}
+.goog-te-gadget{
+  font-size: 0px !important;
+}
+.goog-te-gadget div{
+  display: inline;
+}
+
+.goog-te-gadget div select{
+width: 131px;
+height: 35px;
+background-color: #08192D !important;
+color: #fff;
+padding: 2px;
+outline: none;border:none;
+}
+.goog-te-gadget div select option{
+  background-color: #08192D;
+
+}
+.goog-te-gadget div select option:hover{
+  cursor: pointer;
+}
+.goog-te-gadget div select:hover{
+  background-color: #DA0353 !important;
+  cursor: pointer;
+}
+
+
+
+
+.navbar .nav-links ul li button{
+  border-radius: none;
+}
+
 .nav-links input[type='checkbox']{
   display: none;
 }
@@ -108,7 +162,26 @@ background: #DA0353;
     color: #DA0353;
   }
 
+.dropdown button{
+  color: #fff;
+}
+.dropdown button:hover{
+  background: #DA0353;
+  color: #fff;
+}
+.dropdown-menu{
+  padding: 0 !important;
+  padding-right: 0 !important;
+  border-radius: 5px;
+}
+.dropdown-menu a{
+  background:#08192D;
+  padding:0px 5px 0px 10px !important;
+  margin: 0 !important;
 
+}
+.dropdown-menu .dropdown-item:hover{
+border-radius: none !important;}
 /* --------------Body stylig----------------- */
 
 .body-content:first-child{
@@ -117,6 +190,7 @@ background: #DA0353;
 .body-content{
   margin: 50px 0;
   color: white;
+
 
 }
 .body-content section{
@@ -127,6 +201,7 @@ background: #DA0353;
 .body-content:nth-child(odd){
   background:rgba(255, 82, 82,.35);
 }
+
 .body-content:nth-child(even){
   background:rgba(33, 140, 116,.80);
 }
@@ -151,7 +226,9 @@ background: #DA0353;
 .section-img-7{
   background-image: url('../images/');
 }
-
+.body-content .section{
+  min-height: 206px;
+}
 .body-content .section-img {
   background-size: cover;
   min-width: 400px;
@@ -191,11 +268,11 @@ background: #DA0353;
   color:white;
   font-size: 15px;
   padding: 7px 30px;
-  background: #DA0353;
   border-radius: 5px;
   text-transform: capitalize;
   margin-left: 20px;
-
+  background: #DA0353;
+  background-position: left;
 }
 .body-content .section-text a:last-child{
   background: #54CD7C;
@@ -273,6 +350,27 @@ transition: .3s;
   color:white;
   transition: .3s;
 }
+
+/* upload btn background */
+#Upload-btn{
+  position: relative;
+  overflow: hidden !important;
+  background-size: 500%;
+  background-image: linear-gradient(to right , #3B3B98 , #FD7272 , #55E6C1 ,#F97F51,#FC427B);
+  background-position: left;
+  animation: bg-animate 3s infinite alternate;
+}
+
+@keyframes bg-animate {
+  0%{
+    background-position: left;
+  }
+  100%{
+    background-position: right;
+  }
+}
+
+
 .footer{
   text-align: center;
   background: #000;
@@ -312,16 +410,6 @@ transition: .3s;
   color: #075E54;
 }
 
-
-
-
-
-
-
-
-
-
-
 /* --------------- my framework------------- */
 .d-nn{
   display: none;
@@ -337,6 +425,9 @@ transition: .3s;
 }
 
 @media (max-width:1250px) {
+  #aboutUs,#contactUs{
+    width: auto !important;
+  }
   .body-content .section-text h2{
     font-size: 28px;
   }
@@ -372,8 +463,10 @@ padding: 30px 50px !important;
 text-align: center;
 }
 }
+
+
 @media (max-width:1250px) {
-.container {
+.Mycontainer-home {
   padding: 0 50px;
 }
 .body-content .section-text {
@@ -382,7 +475,7 @@ text-align: center;
 }
 @media (min-width:850px) {
   .navbar .logo{
-    margin-top: 0px;
+    margin-top: -25px;
   }
 }
 
@@ -391,6 +484,7 @@ text-align: center;
     margin-left: -20px;
     font-size: 16px;
     line-height: 60px;
+    margin-top: -15px;
   }
   .navbar .logo i{
     top:-5px !important;
@@ -405,6 +499,13 @@ text-align: center;
 
 }
 @media (max-width:750px) {
+  .navbar .logo{
+    margin-top: 0px;
+  }
+  .goog-te-gadget div{
+    position: static;
+    background-color:  #000 !important;
+  }
   .body-content .section-img {
     min-width: 500px;
     min-height: 255px;
@@ -417,7 +518,7 @@ text-align: center;
   height: 200px !important;
   line-height: 10px;
 }
-.container {
+.Mycontainer-home {
   padding: 0 20px;
 }
 }
