--- a/public/css/policy.css
+++ b/public/css/policy.css
@@ -1,20 +1,59 @@
-body,html{
+body{
   height: 100vh;
+  background-image: url('../images/policy.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  filter: blur();
+
 }
 .Mycontainer{
+
   flex: 1;
-  padding: 100px 200px ;
+  padding: 100px 200px;
 }
 .policy-content{
   color: #fff;
+  overflow: auto;
+}
+.policy-content ol{
+  list-style:decimal-leading-zero;
+  padding: 0;
+  margin: 0;
+  padding:10px 50px;
+
+}
+.policy-content ol h2{
+  font-size: 28px;
+}
+.policy-content ol p{
+  font-size: 16px;
 }
 
 @media (max-width:986px) {
   .Mycontainer{
-    padding:100px 50px;
+    padding:100px 10px;
   }
 }
 
+@media (max-width:750px) {
+  body{
+    background-image: url('../images/policy-res.jpg') !important;
+    height: auto;
+    width: auto;
+  }
+  .policy-content ol h2{
+    font-size: 22px !important;
+  }
+  .policy-content ol p{
+    font-size: 15px !important;
+  }
+  .Mycontainer{
+    flex: 1;
+  }
+}
 @media (max-width:986px) {
   /* navbar */
   .navbar{
