--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -8,6 +8,11 @@ body{
 .Mycontainer{
  flex:1;
 }
+.contact-info{
+  text-align: center;
+  color: #fff;
+  margin-top: 20px;
+}
 .contactus-content{
   width: 100%;
 }
@@ -15,7 +20,7 @@ body{
   border:1px dashed #ccc;
   width: 550px;
   padding: 20px 50px;
-  margin:100px auto;
+  margin:10px auto 50px ;
   transition: none;
   text-align: center;
   border-radius:10px;
@@ -77,9 +82,6 @@ height: 40px;
 }
 
 
-
-
-
 @media (max-width:1200px) {
   .contact-form{
     width: 430px;
@@ -90,13 +92,6 @@ height: 40px;
   }
 
 }
-
-
-
-
-
-
-
 
 @media (max-width:986px) {
   /* navbar */
