--- a/public/css/donate.css
+++ b/public/css/donate.css
@@ -1,4 +1,4 @@
-body,html{
+body{
     font-family: 'Roboto';
     background: #0c2461;
     height: 100vh;
@@ -6,25 +6,12 @@ body,html{
   .Mycontainer{
     flex:1;
   }
-  .donate-selec{
-  width: 150px ;
-  text-align: center;
-  padding:5px 20px;
-  border:1px solid #ddd;
-  margin-bottom: 15px;
-  background: #74b9ff;
-  color:#fff;
-  outline: none;
-  cursor: pointer;
-  border-radius: 3px;
- padding-left: 45px;
-}
 .donate-content{
     background-image: url('../images/donate.png');
     background-size: cover;
     width: 700px;
     height: 544px;
-    margin: 100px auto 50px auto;
+    margin: 50px auto ;
 }
 .donate-content p{
   text-align: center;
@@ -72,6 +59,20 @@ body,html{
   color: #fff;
   background: #3c6382;
   text-transform: capitalize;
+}
+
+.donate-selec{
+  width: 150px ;
+  text-align: center;
+  padding:5px 20px;
+  border:1px solid #ddd;
+  margin-bottom: 15px;
+  background: #74b9ff;
+  color:#fff;
+  outline: none;
+  cursor: pointer;
+  border-radius: 3px;
+ padding-left: 45px;
 }
 
 @media (min-width:850px) {
@@ -122,7 +123,7 @@ body,html{
     }
   .donate-content{
     width: 300px;
-    height: 232px;
+    height: 300px;
   }
   .donate-amount{
     text-align: center;
