--- a/public/css/download.css
+++ b/public/css/download.css
@@ -7,7 +7,8 @@ body,html{
 
 .Mycontainer{
     padding:0px !important;
-    flex: 1;
+    min-height:100vh;
+    /*save andload*/
 }
 .msg-content{
 
@@ -20,7 +21,7 @@ body,html{
     text-transform: capitalize;
     color: white;
     text-align: center;
-    width: 500px;
+    width: 700px;
     margin: 20px auto;
     transition: .5s;
 }
