--- a/public/css/policy.css
+++ b/public/css/policy.css
@@ -2,7 +2,7 @@ body{
 height: 100vh;
 }
 .Mycontainer{
-  flex: 1;
+   min-height:100vh;
   padding: 100px 200px;
   background-image: url('../images/policy.jpg');
   background-size: cover;
