--- a/public/css/wallet.css
+++ b/public/css/wallet.css
@@ -4,7 +4,7 @@ body,html{
     height: 100vh;
   }
   .Mycontainer{
-    flex:1;
+      min-height:100vh;
   }
 .btc-container{
   background: #fff;
