--- a/public/css/tags.css
+++ b/public/css/tags.css
@@ -469,9 +469,314 @@ input[type=range]:focus::-ms-fill-upper {
 
 
 
+ *{
+    margin: 0px;padding: 0px;box-sizing: border-box;
+}
+.waterMarkcont{
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    width: 90%;
+  }
+  .waterMarkBtn{
+    padding: 0px 20px 10px !important;
+    height: 100%;
+    line-height: 40px;
+    display: inline-block;
+    color: #fff;
+    cursor: pointer;
+    background: #777;
+    margin: 0px;
+    border-radius: 5px 0px 0px 5px;
+  }
+  .waterMarkImgUrl{
+    padding: 5px 10px 5px 10px !important;
+    width:100%;
+    color: #777;
+    font-size: 14px;
+    outline: none;
+    border-radius: 0px 5px 5px 0px !important;
+  }
+
+  .watermarkSelect{
+      padding-left: 50px;
+  }
+  .watermarkSelect select{
+    margin:auto;
+    width:150px;
+    height:40px;
+    padding: 10px;
+    cursor: pointer;
+    border:none;
+    color:#fff;
+    background:#747d8c;
+    text-transform: capitalize;
+    border-radius: 5px;
+ 
+  }
+  .waterMarkTxt{
+      display: none;
+  }
+  .inptColor{
+    width: 100%;
+    height: 40px;
+    background: none;
+    outline: none;
+    border:1px solid #ccc;
+    cursor: pointer;
+    border-radius: 3px;
+  }
+
+  .control-cont input{
+    width: 80% !important;
+  }
+
+.contorlRange{
+  display: flex;
+  align-items: center;
+  height: 40px;
+}
+.contorlRange input{
+  height: 100%;
+}
+.contorlRange label:last-child{
+  padding: 0px;
+
+}
+.contorlRange label:first-child{
+  padding-top: 0;
+}
+.contorlRange label{
+  margin: 0px 10px;
+  height: 100%;
+  line-height: 40px;
+}
+.contorlRange label:first-child{
+  margin-left: 0px;
+}
+.contorlRangeBtn{
+  padding-left:50px;
+  margin-top:10px ;
+}
+.contorlRangeBtn button{
+  padding: 10px 20px;
+  color: #fff;
+  background: none;
+  background: #054e78;
+  border: none;
+  border-radius: 3px;
+}
+.contorlRangeBtn button:hover{
+  opacity: .8;
+}
+.rangeHolder{
+  background: #fff;
+  color: #777;
+  display: inline-block;
+  padding: 0px 10px 0px 0px;
+  font-size: 12px;
+}
+.btnRangclear{
+  cursor: pointer;
+  color: #f94f2d;
+  font-size: 18px;
+}
+.val-cont{
+  display: inline-flex;
+  align-items: center;
+  background:#fff;
+  padding: 3px 5px 3px 10px;
+  margin: 5px;
+  border-radius: 3px;
+  
+}
+
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 7.3px 0;
+  background: none;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 11.4px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: rgba(48, 113, 169, 0.78);
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0.9px 0.9px 1px #000031, 0px 0px 0.9px #00004b;
+  border: 1.8px solid #00001e;
+  height: 26px;
+  width: 26px;
+  border-radius: 15px;
+  background: #254175;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: rgba(54, 126, 189, 0.78);
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 11.4px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: rgba(48, 113, 169, 0.78);
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0.9px 0.9px 1px #000031, 0px 0px 0.9px #00004b;
+  border: 1.8px solid #00001e;
+  height: 26px;
+  width: 26px;
+  border-radius: 15px;
+  background: #254175;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 11.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: rgba(42, 100, 149, 0.78);
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: rgba(48, 113, 169, 0.78);
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 0.9px 0.9px 1px #000031, 0px 0px 0.9px #00004b;
+  border: 1.8px solid #00001e;
+  height: 26px;
+  width: 26px;
+  border-radius: 15px;
+  background: #254175;
+  cursor: pointer;
+  height: 11.4px;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: rgba(48, 113, 169, 0.78);
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: rgba(54, 126, 189, 0.78);
+}
+
+
+/* ====================radio style================= */
+.private-selector{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  margin: 0 !important;
+}
+.inputGroup {
+  background-color: #fff;
+  display: block;
+  margin: 10px 0;
+  width: 40%;
+  position: relative;
+  margin:10px auto;
+}
+.inputGroup label {
+  padding: 12px 30px;
+  width: 100%;
+  display: block;
+  text-align: left;
+  color: #000;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+  transition: color 200ms ease-in;
+  overflow: hidden;
+  margin-bottom: 0px;
+}
+.inputGroup label:before {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  content: "";
+  background-color: silver;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale3d(1, 1, 1);
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  z-index: -1;
+}
+.inputGroup label:after {
+  width: 32px;
+  height: 32px;
+  content: "";
+  border: 2px solid #D1D7DC;
+  background-color: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+  background-repeat: no-repeat;
+  background-position: 2px 3px;
+  border-radius: 50%;
+  z-index: 2;
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: all 200ms ease-in;
+}
+.inputGroup input:checked ~ label {
+  color: #fff;
+}
+.inputGroup input:checked ~ label:before {
+  transform: translate(-50%, -50%) scale3d(56, 56, 1);
+  opacity: 1;
+}
+.inputGroup input:checked ~ label:after {
+  background-color: #DA0353;
+  border-color: #DA0353;
+}
+.inputGroup input {
+  width: 32px;
+  height: 32px;
+  order: 1;
+  z-index: 2;
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  visibility: hidden;
+}
+
+/* ===========================end of radio================= */
+  @media screen and (max-width:750px){
+    .inputGroup{
+      width: 75%;
+    }
+  }
   @media screen and (max-width:576px){
     .watermarkSelect{
       padding-left: 0px;
       margin: 10px auto;
     }
+
+
   }
