--- a/public/css/formStyle.css
+++ b/public/css/formStyle.css
@@ -1,17 +1,12 @@
-
 body,html{
   background: #0A183D;
   font-family: 'Roboto';
-  display: flex;
-  flex-direction: column;
   height: 100vh;
 }
 
-
-
 .Mycontainer{
   padding: 0;
-    min-height:100vh;
+  min-height:100vh;
 
 }
 .form-container{
@@ -19,11 +14,17 @@ body,html{
   padding: 50px 80px;
   margin: auto;
   border-radius: 3px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   max-height: auto;
   margin-top: 80px !important;
   margin-bottom:calc(100vh/8);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
   transition: .3s;
 }
 
@@ -63,12 +64,16 @@ body,html{
 
 }
 .form-field{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 12px;
   color:#777;
   margin: 20px 0 !important;
   position: relative;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .form-field label i{
   color:rgba(26, 188, 156, .5);
@@ -84,14 +89,22 @@ body,html{
   z-index: 2;
   left: 90px;
 }
+.form-field input::-webkit-input-placeholder{color: #ccc;}
+.form-field input::-moz-placeholder{color: #ccc;}
+.form-field input:-ms-input-placeholder{color: #ccc;}
+.form-field input::-ms-input-placeholder{color: #ccc;}
 .form-field input::placeholder{color: #ccc;}
 .form-field input{
 
-  flex-basis: 60%;
+  -ms-flex-preferred-size: 60%;
+
+      flex-basis: 60%;
   height: 35px;
   padding: 5px 15px 5px 25px;
   border:none;
   outline:none;
+  -webkit-transition:.2s;
+  -o-transition:.2s;
   transition:.2s;
   border-bottom: 1px solid #999;
   margin-left: 10px;
@@ -106,7 +119,8 @@ body,html{
   color:white;
   background: #48dbfb;
   height: 40px;
-  flex-basis: 60%;
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
   font-size: 16px;
   margin: auto;
   cursor: pointer;
@@ -122,6 +136,60 @@ body,html{
   display:none;
 }
 
+
+#google_translate_element{
+  position: relative;
+}
+.goog-logo-link{
+  display: none;
+}
+.goog-logo-link #text{
+  display: none;
+}
+.goog-te-gadget{
+  font-size: 0px !important;
+}
+.goog-te-gadget div{
+  display: inline;
+}
+
+.goog-te-gadget div select{
+width: 131px;
+height: 35px;
+background-color: #08192D !important;
+color: #fff;
+padding: 2px;
+outline: none;border:none;
+}
+.goog-te-gadget div select option{
+  background-color: #08192D;
+
+}
+.goog-te-gadget div select option:hover{
+  cursor: pointer;
+}
+.goog-te-gadget div select:hover{
+  background-color: #DA0353 !important;
+  cursor: pointer;
+}
+
+@media (max-width:896px) {
+  .navbar .logo{
+    margin-left: -20px;
+    font-size: 16px;
+    line-height: 60px;
+    margin-top: -25px !important ;
+  }
+  .navbar .logo i{
+    top:-5px !important;
+    left: 15px;
+    font-size: 28px;
+    line-height: 70px;
+  }
+  .navbar .logo span{
+    font-size: 18px;
+  }
+}
 @media (max-width:1000px) {
   .form-container{
       margin-top: 70px !important;
@@ -168,4 +236,52 @@ body,html{
   }
 }
 
+@media (max-width:976px) {
+  /* navbar */
+  .navbar{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+.navbar .logo{
+  margin-top: 0px !important ;
+}
 
+.nav-links .fa-bars{
+  display: block;
+}
+.nav-links ul li {
+  display:block;
+  width: 100%;
+  padding: 10px 0px !important;
+}
+.nav-links ul li:hover{
+  background: #636e72;
+  cursor: pointer;
+  border-left: 4px solid #DA0353;
+}
+.nav-links ul li:hover a{
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+  padding-left: 40px;
+  color: #DA0353;
+  border:none;
+  font-weight: bold
+}
+.navbar .nav-links ul li a:hover{
+  border:none !important;
+  color: #DA0353;
+  background: none !important;
+}
+
+}
+
+.footer{
+  background: #000;
+ 
+}
