--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -298,3 +298,17 @@ border: 1px solid $background-color;
   cursor: pointer;
 }
 
+.terms-and-conditons-page{
+    margin-top: 7rem;
+    article{
+        h1,h2,h3,h4,h5,h6{
+            font-weight: bold;
+        }
+        p{
+            color: lighten($color: $text-color, $amount: 10);
+        }
+    }
+}
+.privacy-policy-page{
+    margin-top: 7rem;
+}
